fix: some panel content getting cut off and not taking full available height

--- a/src/styles/Extn-BottomPanelTabs.less
+++ b/src/styles/Extn-BottomPanelTabs.less
@@ -47,6 +47,12 @@
         .toolbar {
             box-shadow: none;
         }
+
+        .resizable-content {
+            flex: 1;
+            min-height: 0;
+            height: auto !important;
+        }
     }
 }
 
